--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "lint": "npx eslint ./src"
+    "lint": "npx eslint ./src",
+    "build" : "tsc",
+    "start": "node ./dist/server.js"
   },
   "dependencies": {
+    "@types/pdfkit": "^0.17.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
@@ -29,6 +32,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.1",
+    "redis": "^5.8.0",
     "zod": "^3.25.75"
   },
   "devDependencies": {
